--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/2222
+spring.datasource.url=jdbc:postgresql://localhost:5432/HRMS1
 spring.datasource.username=postgres
 spring.datasource.password=258456
 spring.jpa.properties.jakarta.persistence.validation.mode = none
